tests/operator/greater_num_string.out
[31merror[error]: unsupported operand type(s) for >: 'number' and 'str'
----- Traceback -----
  ┌─ <unknown>:1:9
  | 
1 | print(1 > "1")
  |          ^
[0m